@@ -90,6 +90,7 @@
 * StripePI: Fix the store three_d_secure_usage field [yunnydang] #5338
 * Litle: Success codes added to valid responses [jherreraa] #5339
 * CommerceHub: Update Production URL [almalee24] #5340
+* CommerceHub: Add Network Token support [almalee24] #5331
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
